--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
             PATH=$(go env GOPATH)/bin:$PATH
 
             go build
-            ./lc-go
+            go test
 
   linux:
     runs-on: ubuntu-latest
@@ -70,10 +70,10 @@ jobs:
       with:
         go-version: ${{ env.GO_VERSION }}
 
-    - name: Build and run
+    - name: Build and test
       run: |
         go build
-        ./lc-go
+        go test
 
   mac:
     runs-on: macos-latest
@@ -86,7 +86,7 @@ jobs:
       with:
         go-version: ${{ env.GO_VERSION }}
 
-    - name: Build and run
+    - name: Build and test
       run: |
         go build
-        ./lc-go
+        go test
